--- a/src/main/resources/org/proview/test/EditBookInfoView.fxml
+++ b/src/main/resources/org/proview/test/EditBookInfoView.fxml
@@ -1,35 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="473.0" prefWidth="1154.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.EditBookInfoView">
+<BorderPane prefHeight="473.0" prefWidth="1154.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.EditBookInfoView">
     <top>
         <fx:include source="NavBarView.fxml" />
     </top>
    <center>
       <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="1187.0">
          <children>
-            <AnchorPane prefHeight="400.0" prefWidth="908.0">
+            <VBox spacing="10.0">
                <children>
-                  <TextField fx:id="titleField" layoutX="14.0" layoutY="20.0" prefHeight="74.0" prefWidth="437.0" promptText="Title">
+                  <TextField fx:id="titleField" prefHeight="74.0" prefWidth="437.0" promptText="Title">
                      <font>
                         <Font size="35.0" />
                      </font>
                   </TextField>
-                  <TextField fx:id="authorField" layoutX="14.0" layoutY="105.0" promptText="Author" />
-                  <TextField fx:id="tagField" layoutX="14.0" layoutY="140.0" promptText="Tag" />
-                  <TextField fx:id="copiesField" layoutX="14.0" layoutY="313.0" prefHeight="25.0" prefWidth="168.0" promptText="Number of copies available" />
-                  <TextArea fx:id="descriptionField" layoutX="14.0" layoutY="173.0" prefHeight="128.0" prefWidth="435.0" promptText="Description" wrapText="true" />
+                  <TextField fx:id="authorField" promptText="Author" />
+                  <TextField fx:id="copiesField" prefHeight="25.0" prefWidth="168.0" promptText="Number of copies available" />
+                  <TextArea fx:id="descriptionField" prefHeight="128.0" prefWidth="435.0" promptText="Description" wrapText="true" />
+                  <HBox fx:id="tagSelectedHBox" alignment="CENTER_LEFT" minHeight="30.0" prefWidth="437.0" spacing="10.0" styleClass="border">
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                     <padding>
+                        <Insets left="10.0" />
+                     </padding></HBox>
+                  <MenuButton fx:id="tagSelectDropdown" mnemonicParsing="false" text="Select Tag..." />
                </children>
-            </AnchorPane>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+               <padding>
+                  <Insets left="20.0" />
+               </padding>
+            </VBox>
          </children>
       </HBox>
    </center>
@@ -52,4 +69,8 @@
          </children>
       </AnchorPane>
    </bottom>
+   <stylesheets>
+      <URL value="@styles/styles.css" />
+      <URL value="@styles/EditBookInfoView.css" />
+   </stylesheets>
 </BorderPane>
