--- a/src/main/resources/org/proview/test/NavBarView.fxml
+++ b/src/main/resources/org/proview/test/NavBarView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
@@ -7,10 +8,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Line?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<HBox fx:id="navBarHBox" prefHeight="50.0" prefWidth="1300.0" stylesheets="@styles/NavBarView.css" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.NavBarView">
+<HBox fx:id="navBarHBox" prefHeight="50.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.NavBarView">
    <children>
       <AnchorPane fx:id="topPane" prefHeight="0.0" prefWidth="1300.0" styleClass="nav-bar">
          <children>
@@ -47,15 +49,19 @@
                      </graphic></Button>
                </children>
             </HBox>
-            <HBox layoutX="532.0" layoutY="10.0" spacing="10.0">
+            <HBox alignment="CENTER" layoutX="532.0" layoutY="10.0" spacing="10.0">
                <children>
                   <TextField fx:id="bookSearchBar" onAction="#onSearchButtonClick" prefHeight="33.0" prefWidth="595.0" promptText="Search..." styleClass="search-input" />
                   <Button fx:id="searchButton" onAction="#onSearchButtonClick" prefHeight="15.0" prefWidth="16.0" styleClass="search-button" />
-                  <Button fx:id="profileButton" onAction="#onProfileButtonClick" styleClass="icon-button" />
+                  <Circle fx:id="avatarImageCircle" fill="#1fff78" radius="15.0" stroke="WHITE" strokeType="INSIDE" styleClass="avatar-circle" />
                   <Button fx:id="logoutButton" onAction="#onLogoutButtonClick" styleClass="logout-button" text="Log out" />
                </children>
             </HBox>
          </children>
       </AnchorPane>
    </children>
+   <stylesheets>
+      <URL value="@styles/styles.css" />
+      <URL value="@styles/NavBarView.css" />
+   </stylesheets>
 </HBox>
