--- a/src/main/resources/org/proview/test/styles/NavBarView.css
+++ b/src/main/resources/org/proview/test/styles/NavBarView.css
@@ -1,5 +1,3 @@
-/* NavBarView.css */
-
 .nav-button:hover .ikonli-font-icon {
     -fx-icon-color: #FFFFFF;
 }
@@ -23,6 +21,15 @@
 .nav-button:hover {
     -fx-background-color: #1D3557;
     -fx-text-fill: #ffffff;
+}
+
+.avatar-circle {
+    -fx-stroke-width: 0;
+}
+
+.avatar-circle:hover {
+    -fx-stroke-width: 1;
+    -fx-stroke: -white;
 }
 
 .search-input {
