--- a/src/main/resources/org/proview/test/styles/RegisterView.css
+++ b/src/main/resources/org/proview/test/styles/RegisterView.css
@@ -35,13 +35,13 @@
     -fx-font-size: 14px;
     -fx-font-weight: bold;
     -fx-text-fill: #ffffff;
-    -fx-background-color: #457B9D;
+    -fx-background-color: -dark-blue;
     -fx-background-radius: 10px;
     -fx-padding: 7px 20px;
 }
 
 .button:hover {
-    -fx-background-color: #1D3557;
+    -fx-background-color: -dark-blue;
 }
 
 /* Styling for the small link */
