--- a/src/main/resources/org/proview/test/styles/ReviewCellView.css
+++ b/src/main/resources/org/proview/test/styles/ReviewCellView.css
@@ -12,7 +12,7 @@
 }
 
 .box {
-    -fx-background-color: #A8DADC;
-    -fx-border-color: #1D3557;
+    -fx-background-color: -light-blue;
+    -fx-border-color: -dark-blue;
     -fx-border-radius: 5;
 }
