--- a/src/main/resources/org/proview/test/BookCellCompactView.fxml
+++ b/src/main/resources/org/proview/test/BookCellCompactView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<Button mnemonicParsing="false" onAction="#onMouseClick" styleClass="book-cell-button" stylesheets="@styles/ListView.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Container.BookCellCompactView">
+<Button mnemonicParsing="false" onAction="#onMouseClick" styleClass="book-cell-button" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Container.BookCellCompactView">
    <graphic>
       <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="800.0">
          <children>
@@ -56,7 +57,7 @@
                                     <Insets />
                                  </HBox.margin>
                               </Label>
-                              <FontIcon iconColor="GOLDENROD" iconLiteral="fas-star" iconSize="18">
+                              <FontIcon iconColor="GOLDENROD" iconLiteral="fas-star" iconSize="18" styleClass="ikonli-font-icon">
                                  <HBox.margin>
                                     <Insets right="5.0" />
                                  </HBox.margin>
@@ -66,7 +67,7 @@
                                     <Font name="System Bold" size="18.0" />
                                  </font>
                               </Label>
-                              <FontIcon iconColor="#457b9d" iconLiteral="fas-book-reader" iconSize="18" />
+                              <FontIcon iconColor="#457b9d" iconLiteral="fas-book-reader" iconSize="18" styleClass="ikonli-font-icon" />
                            </children>
                            <HBox.margin>
                               <Insets right="10.0" />
@@ -87,4 +88,8 @@
          </children>
       </HBox>
    </graphic>
+   <stylesheets>
+      <URL value="@styles/styles.css" />
+      <URL value="@styles/ListView.css" />
+   </stylesheets>
 </Button>
