--- a/src/main/resources/org/proview/test/EditProfileView.fxml
+++ b/src/main/resources/org/proview/test/EditProfileView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -10,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="700.0" prefWidth="1300.0" stylesheets="@styles/EditProfileView.css" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.EditProfileView">
+<AnchorPane prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.EditProfileView">
    <VBox alignment="CENTER" layoutX="435.0" layoutY="1.0" onKeyReleased="#onKeyReleased" prefHeight="345.0" prefWidth="419.0" spacing="15.0" styleClass="register-form">
       <children>
          <ImageView fx:id="avatarImageView" fitHeight="150.0" fitWidth="274.0" pickOnBounds="true" preserveRatio="true" />
@@ -33,4 +34,8 @@
          <Insets bottom="0.0" left="0.0" right="0.0" top="0.0" />
       </VBox.margin>
    </VBox>
+   <stylesheets>
+      <URL value="@styles/styles.css" />
+      <URL value="@styles/EditProfileView.css" />
+   </stylesheets>
 </AnchorPane>
