--- a/src/main/resources/org/proview/test/styles/BookInfoView.css
+++ b/src/main/resources/org/proview/test/styles/BookInfoView.css
@@ -1,7 +1,7 @@
 #star-icon-default .ikonli-font-icon {
     -fx-icon-size: 32;
     -fx-icon-code: "far-star";
-    -fx-icon-color: #000000;
+    -fx-icon-color: white;
 }
 
 #star-icon-clicked .ikonli-font-icon {
