--- a/src/main/resources/org/proview/test/styles/NavBarView.css
+++ b/src/main/resources/org/proview/test/styles/NavBarView.css
@@ -38,6 +38,13 @@
     -fx-text-fill: #212529;
     -fx-padding: 7px 10px;
     -fx-background-radius: 10px;
+    -fx-border-color: #f8f9fa;
+    -fx-border-radius: 10px;
+}
+
+.search-bar {
+    -fx-background-color: #f8f9fa;
+    -fx-background-radius: 10px;
     -fx-border-color: #ced4da;
     -fx-border-radius: 10px;
 }
